--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(main 
   src/main.cpp
   src/App.cpp
+  src/Board.cpp
 )
 
 find_package(SFML COMPONENTS Graphics Window System CONFIG REQUIRED)
